--- a/_posts/2017-12-14-sm-intro.md
+++ b/_posts/2017-12-14-sm-intro.md
@@ -15,9 +15,14 @@ redirect_from:
 
 My saga began in 2008, the year I began my education at the Jacobs School of Music. I developed Sonic Multiplicities independently, choosing to not build on top of other electroacoustic methodologies being explored at the time throughout academia. I was disappointed when I left my bedroom for one of the world's finest music institutions to encounter uninspiring, derivative approaches such as the "laptop orchestra"[^1].
 
-Composers utilizing electronics in the early 20th century can be credited with introducing brand new musical languages to the concert hall. But since computer technology became the main tool of the electroacoustic composer, the results have been largely stale and stagnant. Though great works have been conceived on highly specialized and proprietary audio delivery formats such as higher-order ambisonic arrays, the latter half of the 20th century as a whole can be seen as in decline, compared with the former half.
+Composers utilizing electronics in the early 20th century can be credited with introducing brand new musical languages to the concert hall. But since computer technology became the main tool of the electroacoustic composer, the results have been largely stale and stagnant. Computers did more to automate and streamline traditional compositional processes, and less to broaden the size and scope of the sonic pallette. Though great works have been conceived on highly specialized and proprietary audio delivery formats such as higher-order ambisonic arrays, the accessibility of such approaches is limited. Generally, the latter half of the 20th century as a whole can be seen as in decline, compared with the former half, as it relates to innovations in electronic music.
 
-As both a composer and a media technologist, I have observed many novel approaches to musical computer input. Leveraging MIDI controllers, OSC signals, DIY hardware, and other such things, I have seen many a musical peer attempt to construct a musical language on top of proprietary audio software like Ableton Live. The problem with these approaches is the limitation they place upon the performer and composer alike. Audio software wrestles control away from the composer by making highly opinionated choices around interface design, audio routing, and other essential properties. Similarly, performers are restricted by having to retrofit largely un-musical inputs into the larger corporate digital music paradigm.
+To me, modern electroacoustic music still has not solved certain essential challenges:
+* Unnatural, musically-clumsy input methodology
+* Inability to modulate rhythm/tempi gracefully
+* Very poor stage appeal ("is the laptop performer running a Max patch or checking their email?")
+
+As both a composer and a media technologist, I have observed many novel approaches to solve these issues, notably on the musical computer input front. Leveraging MIDI controllers, OSC signals, DIY hardware, and other such things, I have seen many a musical peer attempt to construct a musical language on top of proprietary audio software like Ableton Live. The problem with these approaches is the limitation they place upon the performer and composer alike. Audio software wrestles control away from the composer by making highly opinionated choices around interface design, audio routing, and other essential properties. Similarly, performers are restricted by having to retrofit largely un-musical inputs into the larger corporate digital music paradigm.
 
 Modern computing technology is so powerful that its users should not have to compromise musical integrity just to leverage it. Musicians are taught a timeless, highly skilled art that should not have to be devalued, simplified, or minimized, especially when paired with a technology so easily adopted.
 
@@ -50,4 +55,4 @@ This introduces the potential for variation of outcome dependent upon date, time
 
 ...TODO
 
-[^1]: This is a footnote about laptop orchestras.
+[^1]: [The "missionary position" of electronic music ensembles](https://i.ytimg.com/vi/RoH9ssraNtU/maxresdefault.jpg)
