--- a/_posts/2017-12-14-sm-intro.md
+++ b/_posts/2017-12-14-sm-intro.md
@@ -22,9 +22,9 @@ To me, modern electroacoustic music still has not solved certain essential chall
 * Inability to modulate rhythm/tempi gracefully
 * Very poor stage appeal ("is the laptop performer running a Max patch or checking their email?")
 
-As both a composer and a media technologist, I have observed many novel approaches to solve these issues, notably on the musical computer input front. Leveraging MIDI controllers, OSC signals, DIY hardware, and other such things, I have seen many a musical peer attempt to construct a musical language on top of proprietary audio software like Ableton Live. The problem with these approaches is the limitation they place upon the performer and composer alike. Audio software wrestles control away from the composer by making highly opinionated choices around interface design, audio routing, and other essential properties. Similarly, performers are restricted by having to retrofit largely un-musical inputs into the larger corporate digital music paradigm.
+As both a composer and a media technologist, I have observed many novel approaches to solve these issues, notably on the musical computer input front. Leveraging MIDI controllers, OSC signals, DIY hardware, and other such things, I have seen many a musical peer attempt to construct a musical language on top of proprietary audio software like Ableton Live. The problem with these approaches is the limitation they place upon the performer and composer alike. Pre-fabbed audio software wrestles control away from the composer by making highly opinionated choices around interface design, audio routing, and other essential properties. Similarly, performers are restricted by having to retrofit largely un-musical inputs into the larger corporate digital music paradigm.
 
-Modern computing technology is so powerful that its users should not have to compromise musical integrity just to leverage it. Musicians are taught a timeless, highly skilled art that should not have to be devalued, simplified, or minimized, especially when paired with a technology so easily adopted.
+Modern computing technology is so powerful that its users should not have to compromise musical integrity just to leverage it. Musicians are taught a timeless, highly skilled art that should not have to be devalued, simplified, or minimized, especially when paired with a technology so easily adopted. Followingly, if a composer chooses to utilize modern digital audio technology to achieve their aesthetic goals, they ought to be well-enough versed in the computer sciences to implement their own software and tools. Otherwise, both their performers and their audiences will be subjected to the very musical compromises that have caused electroacoustic music to become largely stagnant.
 
 ## Musical Input
 
